--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -2,12 +2,8 @@ header {
     min-width: 100%;
     background-color: $color-main-light;
     display: inline-flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    padding: 1rem 1rem 1.5rem 1rem;
-    flex-basis: 1;
-    height: 70px;
+    padding: 1rem 1rem 1rem 1rem;
 }
 
 .logo {
@@ -15,6 +11,7 @@ header {
     margin-left: .5rem;
     font-size: 1.2rem;
     color: $color-text;
+    margin-right: 1rem;
 }
 
 .logo span:nth-child(1) {
@@ -35,26 +32,24 @@ header {
     fill: $color-text-secondary;
     width: 2rem;
     height: 2rem;
+    margin-right: -2.5rem;
 }
 
 .circle {
-    width: 8px;
-    height: 8px;
+    width: .5rem;
+    height: .5rem;
     background-color: $color-highlight;
     border-radius: 50%;
-    margin-top: -30px;
-    margin-left: -5px;
-    padding-top: 0;
+    margin-bottom: 2rem;
+    margin-right: -1rem;
+    margin-left: 2rem;
 }
 
-    .user-info {
+.user-info {
     border-left: 1px solid $color-profile-border;
     margin-left: 2rem;
-    margin-right: 2rem;
     padding-left: 1rem;
     display: flex;
-    flex-direction: row;
-    justify-content: space-around;
     align-items: center;
 }
 
